--- a/firebase.json
+++ b/firebase.json
@@ -1,3 +1,10 @@
 {
-  "rulesFile": "database.rules.json"
+  "hosting": {
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  }
 }
